--- a/women_assist.html
+++ b/women_assist.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GPS Tracking & Alert System</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <header>
@@ -24,8 +24,9 @@
         <section class="sos-button-section">
             <h2>SOS Button</h2>
             <button id="sos-button">Activate SOS</button>
+            
         </section>
     </main>
-    <script src="script.js"></script> <!-- Link to your JavaScript file -->
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
