--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
               <a href="#" class="destination-card">
 
                 <figure class="card-banner">
-                  <img src="./assets/images/destination-1.jpg" width="1140" height="1100" loading="lazy"
+                  <img src="/assets/images/popular-3.jpg" width="1140" height="1100" loading="lazy"
                     alt="Malé, Maldives" class="img-cover">
                 </figure>
 
@@ -169,7 +169,7 @@
               <a href="#" class="destination-card">
 
                 <figure class="card-banner">
-                  <img src="./assets/images/destination-2.jpg" width="1140" height="1100" loading="lazy"
+                  <img src="/assets/images/2.jpg" width="1140" height="1100" loading="lazy"
                     alt="Bangkok, Thailand" class="img-cover">
                 </figure>
 
@@ -186,7 +186,7 @@
               <a href="#" class="destination-card">
 
                 <figure class="card-banner">
-                  <img src="./assets/images/destination-3.jpg" width="1110" height="480" loading="lazy"
+                  <img src="/assets/images/IMG-20231104-WA0011.jpg" width="1110" height="480" loading="lazy"
                     alt="Kuala Lumpur, Malaysia" class="img-cover">
                 </figure>
 
@@ -203,7 +203,7 @@
               <a href="#" class="destination-card">
 
                 <figure class="card-banner">
-                  <img src="./assets/images/destination-4.jpg" width="1110" height="480" loading="lazy"
+                  <img src="./assets/images/p3.jpeg" width="1110" height="480" loading="lazy"
                     alt="Kathmandu, Nepal" class="img-cover">
                 </figure>
 
@@ -220,7 +220,7 @@
               <a href="#" class="destination-card">
 
                 <figure class="card-banner">
-                  <img src="./assets/images/destination-5.jpg" width="1110" height="480" loading="lazy"
+                  <img src="/assets/images/p4.jpeg" width="1110" height="480" loading="lazy"
                     alt="Jakarta, Indonesia" class="img-cover">
                 </figure>
 
@@ -260,7 +260,7 @@
 
                 <figure class="card-banner">
                   <a href="#">
-                    <img src="./assets/images/popular-1.jpg" width="740" height="518" loading="lazy"
+                    <img src="./assets/images/IMG-20231104-WA0010.jpg" width="740" height="518" loading="lazy"
                       alt="Kuala Lumpur, Malaysia" class="img-cover">
                   </a>
                 </figure>
@@ -279,15 +279,15 @@
                   <div class="card-wrapper">
                     <div class="card-price">VR Tour</div>
 
-                    <!-- <div class="card-rating">
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star-outline"></ion-icon>
+                    <div class="card-rating">
+                      <ion-icon >Weather </ion-icon>
+                      <ion-icon ></ion-icon>
+                      <ion-icon ></ion-icon>
+                      <ion-icon ></ion-icon>
+                      <ion-icon ></ion-icon>
 
-                      <data value="2">(2)</data>
-                    </div> -->
+                      
+                    </div>
                   </div>
                   <!-- <img class="qr" src="/assets/images/pool.jpg" alt="" > -->
                   <h3 class="card-title">
@@ -306,7 +306,7 @@
 
                 <figure class="card-banner">
                   <a href="#">
-                    <img src="./assets/images/popular-2.jpg" width="740" height="518" loading="lazy"
+                    <img src="/assets/images/IMG-20231104-WA0009.jpg" width="740" height="518" loading="lazy"
                       alt="Kuala Lumpur, Malaysia" class="img-cover">
                   </a>
                 </figure>
@@ -350,7 +350,7 @@
 
                 <figure class="card-banner">
                   <a href="#">
-                    <img src="./assets/images/popular-3.jpg" width="740" height="518" loading="lazy"
+                    <img src="/assets/images/IMG-20231104-WA0008.jpg" width="740" height="518" loading="lazy"
                       alt="Kuala Lumpur, Malaysia" class="img-cover">
                   </a>
                 </figure>
@@ -485,7 +485,7 @@
           </div>
 
           <figure class="about-banner">
-            <img src="./assets/images/about-banner.png" width="756" height="842" loading="lazy" alt="" class="w-100">
+            <img src="/assets/images/Untitled design.png" width="756" height="842" loading="lazy" alt="" class="w-100">
           </figure>
 
         </div>
@@ -625,7 +625,7 @@
                 <figure class="card-banner">
 
                   <a href="#">
-                    <img src="./assets/images/blog-3.jpg" width="740" height="518" loading="lazy"
+                    <img src="/assets/images/WhatsApp Image 2023-11-04 at 21.21.45_cfb7ddfb.jpg" width="740" height="518" loading="lazy"
                       alt="A good traveler has no fixed plans and is not intent on arriving." class="img-cover">
                   </a>
 
@@ -643,7 +643,7 @@
 
                     <div class="author-wrapper">
                       <figure class="author-avatar">
-                        <img src="./assets/images/author-avatar.png" width="30" height="30" alt="Jony bristow">
+                        <img src="./assets/images/WhatsApp Image 2023-11-04 at 21.21.45_cfb7ddfb.jpg" width="30" height="30" alt="Jony bristow">
                       </figure>
 
                       <div>
