--- a/safety_assist.html
+++ b/safety_assist.html
@@ -18,7 +18,7 @@
                 <div class="max-w-sm font-bold text-2xl font-sans">
                     Travel with Confidence: Your Safety Partner
                 </div>
-                <div class="font-light max-w-lg mt-5 text-xl font-semibold">
+                <div class="font-light max-w-lg mt-5 text-xl font-Times-New-Roman">
                     Safety is non-negotiable when you travel. Explore worry-free with our specialized assistance for women, children, the elderly, and specially-abled travelers.
                 </div>
             </div>
