--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
 
             <p class="section-subtitle">Home  Away From Home</p>
 
-            <h2 class="hero-title-updated">Your Trusted Companion When You Are Away From Home</h2>
-
+            <h2 class="hero-title-updated">Redefining Travel Independence!</h2>
+            <br>
             <p class="hero-text">
-              Embark on an extraordinary journey with us. Wanderer Lust is your reliable partner for unforgettable adventures. We're not just about travel; we're about creating lasting memories
-            </p>
+              Embark on a Beautiful Journey, Where Safety Meets Serenity.            </p>
+              <br>
             
 
             <div class="btn-group">
@@ -124,7 +124,7 @@
           </div>
 
           <figure class="hero-banner">
-            <img src="./assets/images/hero-banner.png" width="686" height="812" loading="lazy" alt="hero banner"
+            <img src="./assets/images/Main.jpg" width="686" height="812" loading="lazy" alt="hero banner"
               class="w-100">
           </figure>
 
@@ -142,9 +142,9 @@
       <section class="section destination">
         <div class="container">
 
-          <p class="section-subtitle">Destinations</p>
+          <p class="section-subtitle">Let's Explore!</p>
 
-          <h2 class="h2 section-title">Choose Your Place</h2>
+          <h2 class="h2 section-title">OUR VISION</h2>
 
           <ul class="destination-list">
 
@@ -152,14 +152,15 @@
               <a href="#" class="destination-card">
 
                 <figure class="card-banner">
-                  <img src="/assets/images/popular-3.jpg" width="1140" height="1100" loading="lazy"
+                  <img src="/assets/images/gps3.jpg" width="1140" height="1100" loading="lazy"
                     alt="Malé, Maldives" class="img-cover">
                 </figure>
 
                 <div class="card-content">
-                  <p class="card-subtitle">Malé</p>
+                  <p class="card-subtitle">Lost? Not Anymore</p>
 
-                  <h3 class="h3 card-title">Maldives</h3>
+                  <h3 class="h3 card-title">Stay on Track, Stay Safe – GPS Leads the Way
+                  </h3>
                 </div>
 
               </a>
@@ -169,14 +170,14 @@
               <a href="#" class="destination-card">
 
                 <figure class="card-banner">
-                  <img src="/assets/images/2.jpg" width="1140" height="1100" loading="lazy"
+                  <img src="/assets/images/women1.jpg" width="1140" height="1100" loading="lazy"
                     alt="Bangkok, Thailand" class="img-cover">
                 </figure>
 
                 <div class="card-content">
-                  <p class="card-subtitle">Bangkok</p>
+                  <p class="card-subtitle">Fearless Women, Safe Nation</p>
 
-                  <h3 class="h3 card-title">Thailand</h3>
+                  <h3 class="h3 card-title">Empowering Women, Embracing Safety</h3>
                 </div>
 
               </a>
@@ -191,9 +192,11 @@
                 </figure>
 
                 <div class="card-content">
-                  <p class="card-subtitle">Kuala Lumpur</p>
+                  <p class="card-subtitle">Seniors Safe, Smiles Bright
+                  </p>
 
-                  <h3 class="h3 card-title">Malaysia</h3>
+                  <h3 class="h3 card-title">Aging Gracefully, Traveling Safely
+                  </h3>
                 </div>
 
               </a>
@@ -208,9 +211,9 @@
                 </figure>
 
                 <div class="card-content">
-                  <p class="card-subtitle">Kathmandu</p>
+                  <p class="card-subtitle">Specially Abled, Unstoppably Abled</p>
 
-                  <h3 class="h3 card-title">Nepal</h3>
+                  <h3 class="h3 card-title">Making Travel Accessible to All</h3>
                 </div>
 
               </a>
@@ -225,9 +228,9 @@
                 </figure>
 
                 <div class="card-content">
-                  <p class="card-subtitle">Jakarta</p>
+                  <p class="card-subtitle">Safe Routes, Bright Futures</p>
 
-                  <h3 class="h3 card-title">Indonesia</h3>
+                  <h3 class="h3 card-title">Nurturing Children's Journeys</h3>
                 </div>
 
               </a>
@@ -251,7 +254,7 @@
 
           <p class="section-subtitle">Featured Tours</p>
 
-          <h2 class="h2 section-title">Most Popular Tours</h2>
+          <h2 class="h2 section-title">Our Popular VR Tours</h2>
 
           <ul class="popular-list">
 
