--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
           </li>
 
           <li>
-            <a href="#" class="navbar-link">Get Recommendations</a>
+            <a href="https://greedy2code-hotel-recommendation-system.streamlit.app/" class="navbar-link">
+              <button>Get Recommendations</button>
+          </a>
+            
           </li>
 
           <li>
