--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           </li>
 
           <li>
-            <a href="#" class="navbar-link">Let's Business</a>
+            <a href="contract.html" class="navbar-link">Let's Business</a>
           </li>
 
           <li>
@@ -190,7 +190,7 @@
               <a href="#" class="destination-card">
 
                 <figure class="card-banner">
-                  <img src="/assets/images/old.jpg" width="1110" height="480" loading="lazy"
+                  <img src="/assets/images/IMG-20231104-WA0011.jpg" width="1110" height="480" loading="lazy"
                     alt="Kuala Lumpur, Malaysia" class="img-cover">
                 </figure>
 
@@ -209,7 +209,7 @@
               <a href="#" class="destination-card">
 
                 <figure class="card-banner">
-                  <img src="./assets/images/sa.jpg" width="1110" height="480" loading="lazy"
+                  <img src="./assets/images/p3.jpeg" width="1110" height="480" loading="lazy"
                     alt="Kathmandu, Nepal" class="img-cover">
                 </figure>
 
@@ -226,7 +226,7 @@
               <a href="#" class="destination-card">
 
                 <figure class="card-banner">
-                  <img src="/assets/images/children.png" width="1110" height="480" loading="lazy"
+                  <img src="/assets/images/p4.jpeg" width="1110" height="480" loading="lazy"
                     alt="Jakarta, Indonesia" class="img-cover">
                 </figure>
 
@@ -266,7 +266,7 @@
 
                 <figure class="card-banner">
                   <a href="#">
-                    <img src="./assets/images/vr1.jpg" width="740" height="518" loading="lazy"
+                    <img src="./assets/images/IMG-20231104-WA0010.jpg" width="740" height="518" loading="lazy"
                       alt="Kuala Lumpur, Malaysia" class="img-cover">
                   </a>
                 </figure>
@@ -315,7 +315,7 @@
 
                 <figure class="card-banner">
                   <a href="#">
-                    <img src="/assets/images/vr2.jpg" width="740" height="518" loading="lazy"
+                    <img src="/assets/images/IMG-20231104-WA0009.jpg" width="740" height="518" loading="lazy"
                       alt="Kuala Lumpur, Malaysia" class="img-cover">
                   </a>
                 </figure>
@@ -359,7 +359,7 @@
 
                 <figure class="card-banner">
                   <a href="#">
-                    <img src="/assets/images/vr3.jpg" width="740" height="518" loading="lazy"
+                    <img src="/assets/images/IMG-20231104-WA0008.jpg" width="740" height="518" loading="lazy"
                       alt="Kuala Lumpur, Malaysia" class="img-cover">
                   </a>
                 </figure>
@@ -427,12 +427,14 @@
 
           <div class="about-content">
 
-            <!-- <p class="section-subtitle">About Us</p> -->
+            <p class="section-subtitle">About Us</p>
 
-            <h2 class="h2 section-title">Our Commitments</h2>
+            <h2 class="h2 section-title">Explore all tour of the world with us.</h2>
 
             <p class="about-text">
-              We empower solo travelers of all backgrounds, from women seeking independence to parents worried about their children's safety. We're here for older individuals who desire support and specially-abled individuals seeking adventure and self-reliance.
+              Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or
+              randomised words
+              which don't look even slightly believable.
             </p>
 
             <ul class="about-list">
@@ -444,10 +446,10 @@
                 </div>
 
                 <div class="about-item-content">
-                  <h3 class="h3 about-item-title">Immersive VR Tours</h3>
+                  <h3 class="h3 about-item-title">Tour guide</h3>
 
                   <p class="about-item-text">
-                    This innovative feature helps reduce anxiety and uncertainty, making solo travel more accessible and enjoyable.
+                    Lorem Ipsum available, but the majority have suffered alteration in some.
                   </p>
                 </div>
 
@@ -460,10 +462,11 @@
                 </div>
 
                 <div class="about-item-content">
-                  <h3 class="h3 about-item-title">GPS Tracking and Alerts</h3>
+                  <h3 class="h3 about-item-title">Friendly price</h3>
 
                   <p class="about-item-text">
-                    Real-time GPS tracking and SOS alerts for traveler safety.                  </p>
+                    Lorem Ipsum available, but the majority have suffered alteration in some.
+                  </p>
                 </div>
 
               </li>
@@ -475,35 +478,14 @@
                 </div>
 
                 <div class="about-item-content">
-                  <h3 class="h3 about-item-title">Personalized Recommendations with ML</h3>
+                  <h3 class="h3 about-item-title">Reliable tour</h3>
 
                   <p class="about-item-text">
-                    AI-driven recommendations for a comfortable stay near your destination.
+                    Lorem Ipsum available, but the majority have suffered alteration in some.
                   </p>
                 </div>
 
               </li>
-              <li class="about-item">
-
-                <div class="about-item-icon">
-                  <ion-icon name="umbrella"></ion-icon>
-                </div>
-
-                <div class="about-item-content">
-                  <h3 class="h3 about-item-title">Privacy and Data Security</h3>
-
-                  <p class="about-item-text">
-                    We prioritize user privacy and data security with strong measures for confidentiality.
-
-
-
-
-
-                  </p>
-                </div>
-
-              </li>
-              
 
             </ul>
 
