--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           </li>
 
           <li>
-            <a href="#" class="navbar-link">Let's Business</a>
+            <a href="contract.html" class="navbar-link">Let's Business</a>
           </li>
 
           <li>
