--- a/contract.html
+++ b/contract.html
@@ -11,25 +11,25 @@
         <section>
             <div class="py-8 lg:py-16 px-4 mx-auto max-w-screen-md">
                 <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-center text-gray-900 dark:text-white">Welcome Potential Collaborators!</h2>
-                <p class="mb-8 lg:mb-16 font-light text-center text-gray-500 dark:text-gray-400 sm:text-xl">Are you a proud owner or manager of an exquisite hotel, bustling mall, cozy hostel, modern PG accommodation, or a residential building? We have an exciting opportunity for you to showcase your establishment and create immersive VR views that will enhance your online presence and attract more customers. Collaborating with us can turn your property into a popular destination for travelers and tourists. Read on to discover how you can partner with us.</p>
+                <p class="mb-8 lg:mb-16 font-light text-center text-gray-500 dark:text-gray-400 sm:text-xl">Are you a proud owner or manager of an exquisite hotel, bustling mall, cozy hostel, modern PG accommodation, or a residential building? Showcase your establishment and create immersive VR views that will enhance your online presence and attract more customers. </p>
                 <form action="#" class="space-y-8">
                     <h3 class="text-lg font-semibold mb-2">How to Get Started</h3>
                     <p>
                         Collaborating with us is a straightforward process. Here's how you can get started:
                     </p>
                     <ol class="list-decimal pl-6 mt-2 text-gray-700">
-                        <li>Contact Us: Reach out to our collaboration team by [insert contact details].</li>
+                        <li>Contact Us: Reach out to our collaboration team.</li>
                         <li>Discuss Your Vision: Share your ideas, preferences, and goals with us. We'll work together to create a tailored VR experience that suits your property.</li>
                         <li>Virtual Capture: Our experienced team will visit your location to capture high-quality 360-degree images and videos to create the virtual tour.</li>
-                        <li>VR Integration: We'll integrate the virtual tour into our platform, making it accessible to our audience.</li>
+                       
                         <li>Promotion: Once live, your establishment will benefit from our marketing efforts to attract travelers from around the world.</li>
-                        <li>Ongoing Support: We provide continuous support and updates to ensure your virtual tour remains top-notch.</li>
+                       
                     </ol>
                 </section>
                 <section>
                     <h3 class="text-lg font-semibold mb-2">Let's Grow Together</h3>
                     <p>
-                        Collaboration with our project is a gateway to expanding your reach and boosting your property's success. Join us on this exciting journey of creating immersive virtual experiences and elevating your establishment to new heights. We're committed to helping you achieve your goals and becoming a traveler's favorite destination. Contact us today to start the collaboration that will transform your business.
+                        Collaboration with our project is a gateway to expanding your reach and boosting your property's success. Join us on this exciting journey of creating immersive virtual experiences and elevating your establishment to new heights.
                     </p>
                 </section>
                 <br>
