--- a/blog.html
+++ b/blog.html
@@ -12,13 +12,13 @@
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.15/dist/tailwind.min.css" rel="stylesheet">
 </head>
 
-<body class="bg-gray-100">
+<body class="bg-gradient-to-r from-indigo-200 to-pink-200">
     
 <div class="p-4"><h2 class="text-4xl font-bold dark:text-white text-center">BLOGS</h2></div>
 
 
   <div class="min-h-screen flex flex-col justify-center items-center">
-    <div class="w-full max-w-3xl p-4 bg-white rounded-lg shadow-md">
+    <div class="w-full max-w-3xl p-4 bg-gray-200 rounded-lg shadow-md">
 
       <h2 class="text-2xl font-semibold text-center mb-4">Share Your Travel Experience</h2>
 
@@ -43,7 +43,7 @@
           <!--whole card act as link-->
           <a href="#">
             <!--blog post card-->
-            <article class="overflow-hidden rounded shadow my-4">
+            <article class="overflow-hidden bg-white rounded shadow my-4">
               <div class="sm:flex sm:flex-wrap">
                 <div class="sm:w-1/2 h-56 sm:h-auto relative">
                   <img
@@ -85,7 +85,7 @@
           <!--card 2-->
           <a href="#">
             <!--blog post card-->
-            <article class="overflow-hidden rounded shadow my-4">
+            <article class="overflow-hidden bg-white rounded shadow my-4">
               <div class="sm:flex sm:flex-wrap p-2">
                 <div class="sm:w-1/2 h-56 sm:h-auto relative">
                   <img
